--- a/src/config/config/config.yaml
+++ b/src/config/config/config.yaml
@@ -2,5 +2,6 @@ version: 1.0.0
 api_url: https://api.5gla.de/api/v1
 api_version_endpoint: /info/version
 api_sentek_data_logging_endpoint: /data-logging/sentek
+api_agvolution_data_logging_endpoint: /device-measurement/agvolution
 max_retries: 3
 retry_delay_seconds: 5
