--- a/src/config/config/config.yaml
+++ b/src/config/config/config.yaml
@@ -1,6 +1,7 @@
 version: 1.0.0
 api_url: https://api.5gla.de/api/v1
 api_version_endpoint: /info/version
+api_agvolution_data_logging_endpoint: /device-measurement/agvolution
 api_sentek_data_logging_endpoint: /device-measurement/sentek
 api_weenat_data_logging_endpoint: /device-measurement/weenat
 max_retries: 3
