--- a/src/config/config/config.yaml
+++ b/src/config/config/config.yaml
@@ -1,5 +1,5 @@
 version: 1.0.0
-api_url: http://fuf.me:8080/api/v1
+api_url: https://api.5gla.de/api/v1
 api_version_endpoint: /info/version
 api_agvolution_data_logging_endpoint: /device-measurement/agvolution
 api_sentek_data_logging_endpoint: /device-measurement/sentek
